Issue #3362405 by Mithun S, Harish1688, lokeshsahu: Need spacing from top - In media dialog box first vertical item & it's content panel

--- a/styles/components/media_library.scss
+++ b/styles/components/media_library.scss
@@ -290,9 +290,15 @@ fieldset.media-library-widget {
     border-radius: var(--gin-border-m);
     box-shadow: var(--gin-shadow-l1);
   }
+
+  .views-form {
+    background: transparent !important;
+  }
 }
 
 .media-library-wrapper {
+  margin-top: 0;
+
   .views-display-link {
     position: relative;
     color: var(--gin-color-text);
